<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberOfPosts"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textPosts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textPosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPosts" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberOfFollowers"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
                app:layout_constraintStart_toEndOf="@+id/tvPosts"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/textFollowing"
                app:layout_constraintHorizontal_bias="0.543"
                app:layout_constraintStart_toEndOf="@+id/textPosts"
                app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberOfFollowing"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        >

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:background="@drawable/input_fields_frame_grey_round"
            app:fab_colorNormal="@color/orange"
            android:src="@drawable/white_gear"
            android:onClick="onClick"
            android:textStyle="bold"
            android:text="@string/edit_your_profile_fragment"
            app:fab_colorPressed="@color/red"
            android:shadowColor="@color/black"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/orange" />

    </RelativeLayout>

</merge>