<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    tools:context=".login.ForgotPassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/forgot_password_text"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/forgotPassLayID"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/grey_100"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:text="@string/password_receive_text"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/com_facebook_button_background_color"
                android:textStyle="italic" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_forgot_password_email"
                android:textColorHint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageButton"
                    style="@android:style/Widget.Holo.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_mail_envelop" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_send_password" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>