<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/my_avatar"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/change_profile_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_photo"
                android:layout_centerHorizontal="true"
                android:text="@string/change_photo"
                android:textColor="@color/orangeMainTheme"
                android:textSize="16sp" />

            <!--username section-->
            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/change_profile_photo"
                android:layout_marginTop="80dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/my_avatar" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/user_name"
                    android:inputType="textNoSuggestions" />
            </RelativeLayout>

            <!--display name section-->
            <RelativeLayout
                android:id="@+id/relLayout2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout1"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_check_mark_orange" />

                <EditText
                    android:id="@+id/displayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/display_name"
                    android:inputType="textNoSuggestions" />
            </RelativeLayout>

            <!--website section-->
            <RelativeLayout
                android:id="@+id/relLayout3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout2"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/domain" />

                <EditText
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/personal_website"
                    android:inputType="textNoSuggestions" />
            </RelativeLayout>

            <!--about section-->
            <RelativeLayout
                android:id="@+id/relLayout4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout3"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/about" />

                <EditText
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/about"
                    android:inputType="textNoSuggestions" />
            </RelativeLayout>

            <TextView
                android:id="@+id/privateInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLayout4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/grey_border_bottom"
                android:text="@string/private_information"
                android:textColor="@color/black"
                android:textSize="25sp" />


            <!--email section-->
            <RelativeLayout
                android:id="@+id/relLayout5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/privateInformation"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/email_open" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/email_hint"
                    android:inputType="textNoSuggestions" />
            </RelativeLayout>


            <!--phone number section-->
            <RelativeLayout
                android:id="@+id/relLayout6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout5"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/smartphone" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/hint_phone_number"
                    android:inputType="textNoSuggestions" />
            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>
</merge>